--- a/style.css
+++ b/style.css
@@ -110,13 +110,21 @@
   font-size: 26px;
   color: white;
 }
+
 .moreDetails {
   background-color: rgb(215, 10, 130) !important;
   padding: 2% 4%;
   border-radius: 30px;
   color: white;
 }
+.carousel-item .update{
+margin-top: -6% !important;
 
+  filter: brightness(0.5); /* Adjust the value between 0 and 1 to decrease brightness */
+
+
+/* padding-top: -10% !important; */
+}
 
 
 /* CAROUSEL END */
@@ -515,12 +523,13 @@
 /* WHY WE CHOOSE  start*/
 
 
-
+ 
 
 .feature-item {
   z-index: 0;
   position: relative; 
   overflow: hidden; 
+  
   border-radius: 10px; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
   background-color: #fff; 
@@ -528,30 +537,41 @@
 }
 
 .feature-item:hover {
- 
+  background: #000;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
 }
 
 .feature-icon i {
   transition: transform 0.3s ease; 
+  
 }
 
 .feature-item:hover .feature-icon i {
   transform: rotate(360deg);
+  
   color: #930d6d !important;
+  /* background-color: #000; */
+
+  
+  
 }
 .feature-icon {
   background-color: #f9f6f8;
   height: 15vh;
   width: 10vw;
   margin-left: 18%;
+  
   text-align: center;
   transition: background-color 0.3s ease; 
 }
 
 .feature-item:hover .feature-icon {
   border-radius:100px;
-  background-color: #f8f7f7;
+  background-color: rgb(247, 247, 4) !important;
+  
+
+
+  
 }
 
 
@@ -563,12 +583,14 @@
   left: 0;
   width: 100%;
   height: 0; 
-  background-color: rgba(179, 183, 183, 0.492); 
+  background-color: rgba(14, 197, 197, 0.492); 
   transition: height 0.5s ease; 
-  z-index: 1; 
+  z-index: -1; 
+  
 }
 .feature-item:hover::before {
   height: 100%; 
+  
 }
 
 .feature-item .feature-content {
@@ -578,6 +600,7 @@
 }
 .feature-item:hover .feature-content {
   color: #fefcfc; 
+  
 }
 .morefeatures{
   background:#cc0541 !important;
