--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@
 
 .animated-slide-in-right {
   position: relative;
-  animation: slideInFromRight 1s ease-out forwards;
+  animation: slideInFromRight 1s ease-out both;
 }
 
 @keyframes slideInFromRight {
@@ -162,9 +162,14 @@
   }
   to {
     transform: translateX(0);
+    background-color: rgb(185, 188, 190);
     opacity: 1;
   }
 }
+
+
+
+
 
 /* ABOUT END */
 
@@ -526,7 +531,30 @@
   background: #cc0541 !important;
   color: white;
   padding: 0px 50px !important;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
 }
+
+
+.morefeatures::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -100%; /* Start from the right */
+  width: 100%;
+  height: 100%;
+  background-color: #007bff; /* Change this to your desired background color */
+  z-index: -1;
+  transition: right 0.4s ease;
+}
+
+.morefeatures:hover::before {
+  right: 0; /* Move to the left when hovered */
+}
+
+
+
 
 /* WHY YOU CHOOSE END */
 
